bootstrap formulario y agregada navbar

--- a/formulario/html_css/indexF.html
+++ b/formulario/html_css/indexF.html
@@ -26,7 +26,7 @@
                 <option value="option1">Nómadas del Aire</option>
                 <option value="option2">Nación del Fuego</option>
                 <option value="option3">Reino Tierra</option>
-                <option value="option4">Tribu de Agua</option>
+                <option value="option4">Tribu del Agua</option>
             </select><br>
 
             <input type="submit" value="Subir Elemento">
