--- a/formulario/bootstrap/indexF.html
+++ b/formulario/bootstrap/indexF.html
@@ -1,3 +1,54 @@
-<html>
-    HOLA
+<!doctype html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Formulario</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="styleF.css">
+</head>
+<body>
+    <div id="navbar">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <a class="nav-link" href="../../listado/bootstrap/index.html">Listado</a>
+                  </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="#">Formulario</a>
+                  <a class="nav-link" href="../../listado/bootstrap/index.html">Listado</a>
+                </div>
+              </div>
+            </div>
+          </nav>
+    </div>
+    
+    <h1>Subir nuevo elemento al listado</h1>
+    <div id="formulario">
+        <div class="mb-3">
+            <label for="formFile" class="form-label">Imagen</label>
+            <input class="form-control" type="file" id="formFile">
+          </div>
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+            <input class="form-control" id="exampleFormControlInput1">
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Descripción</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+
+        <select class="form-select" aria-label="seleccionNacion">
+            <option selected>Seleccione la nación del personaje</option>
+            <option value="1">Nómadas del Aire</option>
+            <option value="2">Nación del Fuego</option>
+            <option value="3">Reino Tierra</option>
+            <option value="3">Tribu del Agua</option>
+          </select>
+
+          <div id="boton">
+            <button type="submit" class="btn btn-primary">Enviar</button>
+          </div>
+    </div>
+</body>
 </html>
