--- a/listado/bootstrap/index.html
+++ b/listado/bootstrap/index.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <div id="navbar">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <a class="nav-link" href="../../formulario/bootstrap/indexF.html">Formulario</a>
+                  </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="#">Listado</a>
+                  <a class="nav-link" href="../../formulario/bootstrap/indexF.html">Formulario</a>
+                </div>
+              </div>
+            </div>
+          </nav>
+    </div>
     <h1>Listado de personajes de Avatar: El Último Maestro del Aire</h1>
     <div class="row">
         <div class="col-4">
@@ -58,9 +73,7 @@
         </div>
 
       </div>
-      <div class="link">
-        <a href="../../formulario/bootstrap/indexF.html">Ingrese al formulario para agregar elementos</a>
-    </div>  
+ 
    
   </body>
 </html>
