--- a/formulario/bootstrap/indexF.html
+++ b/formulario/bootstrap/indexF.html
@@ -43,7 +43,7 @@
             <option value="1">Nómadas del Aire</option>
             <option value="2">Nación del Fuego</option>
             <option value="3">Reino Tierra</option>
-            <option value="3">Tribu del Agua</option>
+            <option value="3">Tribu Agua</option>
           </select>
 
           <div id="boton">
