--- a/listado/html_css/index.html
+++ b/listado/html_css/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="navbar">
+        <a href="../../formulario/html_css/indexF.html">Formulario</a>
+    </div> 
     <div class="titulo">  
         <h1>Listado de personajes de Avatar: El Último Maestro del Aire</h1>
     </div>
@@ -16,9 +19,6 @@
             <li class="azul"><div class="elemento"> <img src="../imagenes/sokka.jpg" alt="Sokka"><p class="nombre">Sokka</p><br> Es guerrero adolescente de la Tribu Agua del Sur y uno de los protagonistas de la serie. Tras la muerte de su madre y después de que su padre se marchara junto con todos los demás hombres adultos de su tribu para luchar en la Guerra de los Cien Años, Sokka fue criado por su abuela, Kanna, junto a su hermana menor Katara.</div></li>
             <li class="azul"><div class="elemento"> <img src="../imagenes/katara.jpg" alt="Katara"><p class="nombre">Katara</p><br> Es un personaje principal. Es una maestra agua, nacida y criada en la Tribu Agua del Sur por su abuela, Kanna, junto a su hermano mayor Sokka. Es la hija menor del Jefe Hakoda y Kya. Katara junto a Sokka, encontró a al Avatar Aang encerrado en un iceberg por más de 100 años.</div></li>
         </ul>
-    </div>
-    <div class="link">
-        <a href="../../formulario/html_css/indexF.html">Ingrese al formulario para agregar elementos</a>
-    </div>  
+    </div> 
 </body>
 </html>
