--- a/formulario/html_css/indexF.html
+++ b/formulario/html_css/indexF.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" type="text/css" href="sytleF.css">
 </head>
 <body>
+    <div class="navbar">
+        <a href="../../listado/html_css/index.html">Listado</a>
+    </div>
     <div class="titulo">  
         <h1>Subir nuevo elemento al listado</h1>
     </div>
@@ -33,10 +36,7 @@
 
         </form>
     </div>
-    <div class="link">
-        <a href="../../listado/html_css/index.html">Vuelva a la pagina principal del listado</a>
-    </div>
-    
+   
 
 </body>
 </html>
